# meridian-core

./: .gitignore  gen_secret.py  pyproject.toml
app/: main.py
app/agents/: brain.py  scraper.py  search.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: enrich.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: migration.sql  supabase_client.py  vector_store.py
app/schemas/: lead.py  user.py
app/services/: orchestrator.py
